# Generated by Django 6.1.1 on 2026-09-26 10:15

from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ("accounts", "0001_initial"),
    ]

    operations = [
        migrations.CreateModel(
            name="OTP",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("email", models.EmailField(max_length=254)),
                (
                    "status",
                    models.CharField(
                        choices=[
                            ("pending", "Pending"),
                            ("verified", "Verified"),
                            ("revoked", "Revoked"),
                        ],
                        db_index=True,
                        default="pending",
                        max_length=16,
                    ),
                ),
                ("code", models.CharField(max_length=128)),
                ("attempts_count", models.PositiveSmallIntegerField(default=0)),
                ("max_attempts", models.PositiveSmallIntegerField(default=5)),
                ("expires_at", models.DateTimeField(db_index=True)),
                ("consumed_at", models.DateTimeField(blank=True, null=True)),
                ("created_at", models.DateTimeField(auto_now_add=True)),
            ],
            options={
                "verbose_name": "OTP",
                "verbose_name_plural": "OTPs",
                "ordering": ["-created_at"],
                "indexes": [
                    models.Index(
                        condition=models.Q(("status", "pending")),
                        fields=["email", "-created_at"],
                        name="idx_otp_lookup",
                    )
                ],
                "constraints": [
                    models.CheckConstraint(
                        condition=models.Q(
                            ("attempts_count__lte", models.F("max_attempts"))
                        ),
                        name="otp_attempts_within_limit",
                    ),
                    models.CheckConstraint(
                        condition=models.Q(("email__isnull", False)),
                        name="otp_has_recipient",
                    ),
                ],
            },
        ),
    ]
